<resources>
    <string name="app_name">Notepad</string>
    <string name="notes">Notes</string>
    <string name="reminders">Reminders</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="select_all">Select all</string>
    <string name="delete">Delete</string>
    <string name="no_notes">No Notes</string>
    <string name="no_notes_msg">Tap the button below to\ncreate a new note.</string>
    <string name="no_reminders">No Reminders</string>
    <string name="no_reminders_msg">Tap the button below to\nadd a new reminder.</string>
    <string name="note">Note</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="sample_caption">Lorem Ipsum Dolor</string>
    <string name="sample_date">Aug 10</string>
    <string name="sample_date_full">10/08/2019</string>
    <string name="sample_time">7:30 PM</string>
    <string name="sample_due_date">7:30 PM on Aug 10</string>
    <string name="sample_content">Lorem ipsum dolor sit amet consectetur adipiscing elit, mattis vestibulum dis dictum primis tempor, varius nisl ornare nisi conubia litora. Aptent phasellus molestie habitant eu aliquet luctus conubia placerat, sapien lectus cursus eget condimentum euismod volutpat curae pellentesque, fringilla turpis class ultricies vivamus nam cras.</string>
    <string name="delete_note">Delete Note</string>
    <string name="question_delete_note">Are you sure you want to delete this note?</string>
    <string name="delete_notes">Delete Notes</string>
    <string name="question_delete_notes">Are you sure you want to delete these notes?</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="question_delete_reminder">Are you sure you want to delete this reminder?</string>
    <string name="delete_reminders">Delete Reminders</string>
    <string name="question_delete_reminders">Are you sure you want to delete these reminders?</string>
    <string name="deleting">Deleting…</string>
    <string name="cancelled">Cancelled.</string>
    <string name="cancel">CANCEL</string>
    <string name="question_discard_changes">Discard changes?</string>
    <string name="deleted">Deleted.</string>
    <string name="new_note">New Note</string>
    <string name="saved">Saved.</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="label">Label</string>
    <string name="error">Something went wrong. Try again later.</string>
    <string name="share_with">Share with</string>
    <string name="copied">Copied.</string>
    <string name="error_empty_title">Note must have a title.</string>
    <string name="error_empty_label">Reminder must have a label.</string>
    <string name="reminder">Reminder</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="new_reminder">New Reminder</string>
    <string name="error_past">The set date and time have already passed.</string>
    <string name="view_all">View All</string>
</resources>
