<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="always" />
    <group
        android:id="@+id/group_edit_mode_only"
        android:visible="false">
        <item
            android:id="@+id/action_save"
            android:icon="@drawable/ic_save"
            android:title="@string/save"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_cancel"
            android:icon="@drawable/ic_delete_x"
            android:title="@android:string/cancel"
            app:showAsAction="always" />
    </group>
    <group
        android:id="@+id/group_view_mode_only"
        android:visible="true">
        <item
            android:id="@+id/action_copy"
            android:title="@string/copy"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_share"
            android:title="@string/share"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_delete"
            android:title="@string/delete"
            app:showAsAction="never" />
    </group>
</menu>