<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_single_select_only">
        <item
            android:id="@+id/action_copy"
            android:icon="@drawable/ic_copy"
            android:title="@string/copy"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share"
            app:showAsAction="always" />
    </group>
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>